# mx-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  refactor-mxagent.md
.cursor/rules/: project.mdc
app/: config.py  main.py
app/agents/: admin_agent.py  finance_agent.py  hr_agent.py  it_agent.py  legal_agent.py  router_agent.py
app/core/: database.py  error_codes.py  exceptions.py  llm.py  logging.py  masking.py  middleware.py  tracing.py
app/evals/: __init__.py  dataset_loader.py  dataset_models.py  executor.py  judge.py  langfuse_eval.py  publisher.py  runner.py  seed_inventory.py
app/knowledge/: config.py  loader.py
app/schemas/: admin.py  hr.py
app/services/: discovery.py  hr.py
backend/: .dockerignore  .env.example  AGENTS.md  Dockerfile  main.py  pyproject.toml
backend/app/: config.py  main.py
backend/evals/: profiles.yaml
docs/: enterprise-assistant-requirements.md  evals-guide.md
frontend/: .dockerignore  AGENTS.md  Dockerfile  README.md  package.json
scripts/: build_eval_datasets.py  create_tables.py  generate_seed.py  generate_token.py  legal_seed.sql  migrate_evals.py  publish_eval_datasets.py  run_evals.py  seed.sql
tests/: conftest.py  test_auth.py  test_config.py  test_eval_dataset_models.py  test_eval_executor.py  test_eval_judge.py  test_eval_langfuse.py  test_eval_publisher.py  test_eval_runner.py  test_eval_seed_inventory.py  test_evaluation_admin_assistant.md  test_evaluation_admin_role.md  test_evaluation_employee_role.md  test_evaluation_talent_discovery.md
(+395 files in other folders)
